# mailsync

./: .cvsignore  ABSTRACT  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  WHATSNEW  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  mailsync  mailsync.1  mailsync.c  msgstring.c
acinclude/: ac_inet_funcs.m4  ac_so_preference.m4  ac_with_cclient.m4  ac_with_krb5.m4  ac_with_md5.m4  ac_with_openssl.m4  ac_with_pam.m4
debian/: README.Debian  buildpackage  changelog  control  copyright  docs  rules
doc/: HACKING  mail_open_close_flowchart.dia  mailsync.1
doc/examples/: mailsync
examples/: mailsync
src/: .cvsignore  Makefile.am  Makefile.in  c-client-header.h  c-client_callbacks.cc  channel.cc  channel.h  commandline.cc  commandline.h  configuration.cc  configuration.h  mail_handling.cc  mail_handling.h  mailsync.cc  mailsync_main.cc  mailsync_types.cc  mailsync_types.h  msgid.cc  msgid.h  msgstring.c  msgstring.h  options.h  parse_config.cc  parse_config.h  store.cc  store.h  types.cc  types.h  utils.cc  utils.h
